2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-04-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust.tcl (indent): Fixed bug in handling of leading
	  whitespace. We must not remove it before indentation. We can
	  remove only trailing whitespace (text, and per line). Did a
	  little micro-optimization to reduce the size of the bytecode.

	* adjust.test: Added tests which check the non-removal of leading
	  whitespace by 'indent'.

2005-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* split.tcl:   Accepted [SF Tcllib Patch 1063774] and added
	* splitn.test: the proposed splitn command. The testsuite has
	* textutil.man: been extended as well, and the documentation
	  too.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expander.tcl (LocUpdate): 'regexp -all' is 8.4'ism, and this
	  package is for 8.2/3 as well. Replaced with a x-version
	  construct.

	* expander.test: Updated tests of error output to contain line/col
	  information. Also added test case actually counting the input.

2004-07-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expander.man: Polished the expander documentation, made use of
	  subsections, removed superfluous para's, indented examples.

2004-07-22  Andreas Kupries  <andreask@activestate.com>

	* expander.tcl: Bugfix in processing of plaintext. Have to save
	  the input for location update. Do not use the result of the text
	  processing.

	* expander.tcl: Extended the method 'expand' to keep track of the
	  location in the string, in terms of line, column, char
	  pos. Extended 'HandleError' to report the location the problem
	  was found at (start position, not end). Added a new method