@@ -1,3 +1,13 @@
+2006-01-10  Andreas Kupries <andreask@activestate.com>
+
+	* expander.tcl (::textutil::expander::Op_cpush): Applied the patch
+	  for [SF Tcllib Bug 1376637], as supplied by Sarnold
+	  <sarnold75@users.sourceforge.net>. Fixes an initialization error
+	  for contexts, where the location data is not set.
+
+	* expander.test: Modified an existing test to fail for the
+	  original error, it does not anymore with the fix applied.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
